# FYMC

./: Makefile  README  README.md  a.archy  config.txt  notre_ultime_fichier_binaire  resultat.txt  rw_binary.c
asm_to_binary/: Makefile  assembleur  main.c  op_codes  register_list  sample1.asm  sample2.asm  sample3.asm  test_prog
asm_to_binary/assembly/: assembly.c  assembly.h
asm_to_binary/parse/: parse.c  parse.h
asm_to_binary/parse/parse_code/: parse_code.c  parse_code.h
asm_to_binary/parse/parse_data/: parse_data.c  parse_data.h
asm_to_binary/samples/: dotprod  fibo  hello
asm_to_binary/tools/: tools.c  tools.h  types.h
binary_to_asm/: main.c
config_file/: dotprod.conf  dotprod_g64.conf  dotprod_s64.conf  dotprod_u64.conf  fibonacci.conf  hello.conf  reduce_sum_u64.conf
reference/: dotprod.archyb  dotprod.asm  dotprod_g64.archyb  dotprod_g64.asm  dotprod_s64.archyb  dotprod_s64.asm  dotprod_u64.archyb  dotprod_u64.asm  fibonacci.asm  hello_world.archyb  hello_world.asm  reduce_sum_u64.archyb  reduce_sum_u64.asm
script/: compare.py  run_bench.sh  run_program.sh  test_function.sh  test_program.py  verify_as.sh
vm/: .gitignore  CMakeLists.txt  Makefile  bench.c  exec_ins.h  fibonacci.archy  header.c  header.h  init.c  init.h  instruction.c  instruction.h  main  main.c  opcode.h  opcode_list.csv  performance.c  registre.h  script.conf  test.c  type.h  utils.h  vm.c  vm.h
vm/core/: CMakeLists.txt  cpu.c  cpu.h
vm/instruction/: cmp.c  cvt.c  f_al.c  g_al.c  hlt.c  instruction_set.c  jmp.c  load.c  mov.c  out.c  par.c  s_al.c  store.c  u_al.c
vm/operation/: CMakeLists.txt
vm/operation/include/: compare_jump.h  conversion.h  cpu.h  f_arithmetic_logic.h  lecture.h  load.h  mov.h  move.h  output.h  s_arithmetic_logic.h  store.h  tools.h  type.h  u_arithmetic_logic.h
vm/operation/src/: compare_jump.c  conversion.c  f_arithmetic_logic.c  lecture.c  load.c  mov.c  move.c  output.c  s_arithmetic_logic.c  store.c  tools.c  u_arithmetic_logic.c
vm/tests/: CMakeLists.txt  FindCMocka.cmake  test_load.c  test_store.c
